tests/error/comptime_expr_errors/guppy_func_in_comptime.err
Error: Invalid comptime expression (at $FILE:13:20)
   | 
11 | @compile_guppy
12 | def foo() -> int:
13 |     return comptime(my_func())
   |                     ^^^^^^^^^ Cannot use a Guppy object in a comptime expression

Function `my_func` may only be called in a Guppy context

Valid comptime expressions must evaluate to a plain Python value. Supported
types are: `bool`, `str`, `int`, `float`, `tuple`, `list`, and `None`.

Guppy compilation failed due to 1 previous error
